--- a/vaja 1/vaja 1.vcxproj.filters
+++ b/vaja 1/vaja 1.vcxproj.filters
@@ -19,4 +19,11 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <None Include="readme.md" />
+    <None Include="..\.gitignore" />
+  </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\log.txt" />
+  </ItemGroup>
 </Project>
