added most of the functionality of Roman Sort. debugging left to do

--- a/vaja 1/vaja 1.vcxproj
+++ b/vaja 1/vaja 1.vcxproj
@@ -27,6 +27,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\log.txt" />
+    <Text Include="..\output.txt" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>17.0</VCProjectVersion>
