--- a/vaja 1/vaja 1.vcxproj.filters
+++ b/vaja 1/vaja 1.vcxproj.filters
@@ -25,5 +25,6 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\log.txt" />
+    <Text Include="..\output.txt" />
   </ItemGroup>
 </Project>
